src/assets/main.css
@import './base.css';

#app {
  font-weight: normal;
}

::selection {
  background: #4af626;
  color: #000;
}

a {
  text-decoration: none;
  color: #fff;
  transition: 0.4s;
  padding: 3px;
}

.transparent_gradient {
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2em;
  background: linear-gradient(180deg, transparent 0, var(--vt-c-black) 100%);
}

@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

@media (min-width: 1024px) {
  body {
    display: flex;
    place-items: center;
  }
}

